--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@fortawesome/fontawesome-free": "5.15.4",
     "@maplibre/maplibre-gl-leaflet": "0.0.22",
     "@react-leaflet/core": "^2.1.0",
+    "@react-three/drei": "^9",
+    "@react-three/fiber": "^8",
+    "@react-three/xr": "^6",
     "adhocracy4": "git+https://github.com/liqd/adhocracy4#82fb1ef56b03d51b8bb9d1b2edddcb5f75a96344",
+    "arpas-arc": "git+https://github.com/liqd/arpas-arc#cf1010fcd5b770a33d20b11084efb8d2bf1a8c45",
     "autoprefixer": "10.4.20",
     "bootstrap": "5.2.3",
     "css-loader": "7.1.2",
@@ -26,6 +30,7 @@
     "dsgvo-video-embed": "git+https://github.com/liqd/dsgvo-video-embed.git",
     "file-saver": "2.0.5",
     "flatpickr": "4.6.13",
+    "framer-motion": "^12.7.4",
     "glob": "11.0.1",
     "immutability-helper": "3.1.1",
     "jquery": "3.7.1",
@@ -44,6 +49,7 @@
     "react-flip-move": "3.0.5",
     "react-leaflet": "4.2.1",
     "react-markdown": "9.0.3",
+    "react-router-dom": "^7.6.0",
     "react-slick": "0.30.3",
     "sass": "1.83.4",
     "sass-loader": "16.0.4",
@@ -51,7 +57,9 @@
     "shpjs": "6.1.0",
     "slick-carousel": "git+https://github.com/liqd/slick#pm-2019-07-overwrites",
     "terser-webpack-plugin": "5.3.11",
-    "timeago.js": "4.0.2"
+    "three": "^0.175.0",
+    "timeago.js": "4.0.2",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@babel/core": "7.26.0",
@@ -62,7 +70,7 @@
     "@babel/preset-react": "7.26.3",
     "@babel/runtime": "7.26.0",
     "@testing-library/jest-dom": "6.6.3",
-    "@testing-library/react": "16.1.0",
+    "@testing-library/react": "16.3.0",
     "babel-loader": "9.2.1",
     "copy-webpack-plugin": "12.0.2",
     "eslint": "8.41.0",
